# message-wall

backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: dependencies.py  main.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 6f65677e02b0_init.py
backend/app/routers/: messages.py  users.py
frontend/: package-lock.json
